--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "ptmem"
-version = "1.1.1"
-description = "Add your description here"
+version = "1.2.0"
+description = "A simple file syntax for declaring flash cards."
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
